--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Flashcard</title>
+</head>
+<body>
+    <section id="container">
+        <article class="cartao">
+            <div class="cartao_conteudo">
+                <h3>Programação</h3>
+                <div class="cartao_conteudo_pergunta">
+                    <p>O que é JavaScript</p>
+                </div>
+                <div class="cartao_conteudo_resposta">
+                    <p>O JavaScript é uma linguagem de programação</p>
+                </div>
+            </div>
+        </article>
+    </section>
+</body>
+</html>
